--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Python requirements
-      run: pip install -r REQUIREMENTS-dev.txt
+      run: pip install -r REQUIREMENTS.txt
 
   test:
     runs-on: ubuntu-latest
