--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,14 +38,14 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run docker-compose build
-      run: docker-compose -f docker-compose-dev.yml build
+      run: docker-compose -f docker-compose.dev.yml build
 
     - name: Run the containers
-      run: docker-compose -f docker-compose-dev.yml up -d
+      run: docker-compose -f docker-compose.dev.yml up -d
     
     - name: Run Coverage test
       run: |
-        cat << EOF | docker-compose -f docker-compose-dev.yml exec -T qgisfeed bash
+        cat << EOF | docker-compose -f docker-compose.dev.yml exec -T qgisfeed bash
         pip install coverage
         python manage.py makemigrations
         python manage.py migrate
