--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - '3.7'
+          - '3.8'
     
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -39,12 +39,10 @@ jobs:
 
     - name: Run docker-compose build
       run: docker-compose -f docker-compose.dev.yml build
-
-    - name: Run the containers
-      run: docker-compose -f docker-compose.dev.yml up -d
     
     - name: Run test
       run: |
+        docker-compose -f docker-compose.dev.yml up -d
         docker-compose -f docker-compose.dev.yml exec -T qgisfeed python qgisfeedproject/manage.py test qgisfeed
         exit_code=$?
         docker-compose -f docker-compose.dev.yml down
