--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,10 +39,14 @@ jobs:
 
     - name: Run docker-compose build
       run: docker-compose -f docker-compose.dev.yml build
+
+    - name: Run the containers
+      run: docker-compose -f docker-compose.dev.yml up -d postgis qgisfeed
     
     - name: Run test
       run: |
-        docker-compose -f docker-compose.dev.yml up -d
+        docker-compose -f docker-compose.dev.yml exec -T makemigrations
+        docker-compose -f docker-compose.dev.yml exec -T migrate
         docker-compose -f docker-compose.dev.yml exec -T qgisfeed python qgisfeedproject/manage.py test qgisfeed
         exit_code=$?
         docker-compose -f docker-compose.dev.yml down
