Update pg-backup, nginx port and use backup volume in docker compose ssl file

--- a/docker-compose-production-ssl.yml
+++ b/docker-compose-production-ssl.yml
@@ -5,7 +5,7 @@ services:
   postgis:
     image: kartoza/postgis:16-3.4
     ports:
-      - "5432"
+    - "5432"
     environment:
       POSTGRES_USER: ${QGISFEED_DOCKER_DBUSER}
       POSTGRES_PASS: ${QGISFEED_DOCKER_DBPASSWORD}
@@ -20,6 +20,7 @@ services:
       test: "POSTGRES_PASS=$${QGISFEED_DOCKER_DBPASSWORD} pg_isready -h 127.0.0.1 -U ${QGISFEED_DOCKER_DBUSER} -d ${QGISFEED_DOCKER_DBNAME}"
     volumes:
       - ${QGISFEED_DOCKER_SHARED_VOLUME}:/var/lib/postgresql
+      - ${QGISFEED_BACKUP_VOLUME}:/backups
     networks:
       internal:
 
@@ -67,7 +68,7 @@ services:
       EMAIL_HOST_PASSWORD: ${EMAIL_HOST_PASSWORD}
     command: /code/entrypoint_production.sh
     expose:
-      - "8000"
+    - "8000"
     volumes:
       - ${QGISFEED_DOCKER_SHARED_VOLUME}:/shared-volume
       - ../qgis-feed:/code
@@ -85,8 +86,8 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - "80:8000"
-      - "443:443"
+    - "80:80"
+    - "443:443"
     logging:
       driver: "json-file"
       options:
@@ -113,9 +114,9 @@ services:
     depends_on:
       - nginx
     command: certonly --webroot --webroot-path=/var/www/webroot --email admin@qgis.org --agree-tos --no-eff-email --force-renewal -d feed.qgis.org
-  
+
   dbbackups:
-    image: kartoza/pg-backup:11.0
+    image: kartoza/pg-backup:16-3.4
     environment:
       DUMPPREFIX: PG_QGIS_FEED
       POSTGRES_DATABASE: ${QGISFEED_DOCKER_DBNAME}
