--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,7 +38,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Generate the .env file
-      run: cp .env.template .env
+      run: cp env.template .env
 
     - name: Run docker-compose build
       run: docker compose -f docker-compose.dev.yml build
